# semantic-media-search

./: .gitignore  README.md  pyproject.toml  run.bat  запуск.bat  концепт.md
src/semantic_media_search/: main.py
src/semantic_media_search/config/: settings.py
src/semantic_media_search/domain/: models.py
src/semantic_media_search/indexing/: vector_index.py
src/semantic_media_search/ml/: clip_model.py  image_encoder.py  text_encoder.py
src/semantic_media_search/scanning/: media_scanner.py
src/semantic_media_search/search/: search_engine.py
src/semantic_media_search/services/: indexing_service.py  reranker.py  search_service.py
src/semantic_media_search/storage/: database.py  file_repository.py
src/semantic_media_search/ui/: indexing_worker.py  main_window.py
